--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,8 +6,7 @@
       <%= f.error_notification %>
 
       <div class="form-inputs">
-        <%= f.input :name,
-                    required: true %>
+        <%= f.input :name %>
         <%= f.input :email,
                     required: true,
                     autofocus: true,
