almost no changes

--- a/app/views/mothers/show.html.erb
+++ b/app/views/mothers/show.html.erb
@@ -5,8 +5,10 @@
     <%= link_to "Book now", "#", class: "btn btn-flat" %>
   </div>
 </div>
-<h1><%= @mother.name %></h1>
-<p>Age: <%= @mother.age %></p>
-<p>Location: <%= @mother.location %></p>
-<p>Hobbies: <%= @mother.hobbies %></p>
-<p>Description: <%= @mother.description %></p>
+<div class="container">
+  <h1><%= @mother.name %></h1>
+  <p>Age: <%= @mother.age %></p>
+  <p>Location: <%= @mother.location %></p>
+  <p>Hobbies: <%= @mother.hobbies %></p>
+  <p>Description: <%= @mother.description %></p>
+</div>
