--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div id="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://www.thesun.co.uk/wp-content/uploads/2019/07/NINTCHDBPICT000509962875.jpg?w=1240);">
+  <div class="banner-content">
+    <h1>Welcome to MILFR</h1>
+    <h3>Mothers In Law For Rent</h3>
+    <p>Look for Mothers in Law in your area</p>
+    <%= simple_form_for :search, url: root_path, method: "GET", html: { class: 'form-inline' } do |f| %>
+      <%= f.input :location, input_html: {value: ""} %>
+      <%= f.submit "Search", class: "btn btn-primary ml-1" %>
+    <% end %>
+  </div>
+</div>
+
