seed avec images, activation Cloudinary, display dans index

--- a/app/views/mothers/index.html.erb
+++ b/app/views/mothers/index.html.erb
@@ -6,6 +6,9 @@
       <%= mother.name %>
       <%= mother.age %>
       <%= link_to"",mother_path(mother) %>
+      <% mother.photos.each do |photo| %>
+      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+      <% end %>
       </li>
     <% end %>
 </ul>
