--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -21,14 +21,25 @@
 
 #banner {
   background-size: cover;
-  height: 90vh;
+  height: 86vh;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-position: right;
 
 }
 
 .banner-content {
   color: white;
+}
+
+label.string.required {
+  opacity: 0;
+  margin:0;
+}
+
+#location-search {
+  justify-content: center;
+  align-items: center;
 }
