--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,12 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  opacity: 1;
   border-bottom: 1px solid lightgrey;
   border-radius: 5px;
+  position: sticky;
+  top: 0;
+  z-index:99;
 }
 
 .navbar-lewagon .navbar-collapse {
