--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
         <%= link_to "List All Mothers-in-law", mothers_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Categories", "#", class: "nav-link" %>
+        <%= link_to "Categories", "http://www.perdu.com/", class: "nav-link" %>
       </li>
       <% if user_signed_in? %>
         <li class="nav-item">
@@ -27,7 +27,7 @@
             <%= image_tag "http://icons.iconarchive.com/icons/gianni-polito/colobrush/256/software-crystal-msn-icon.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to " Your Beloved Mother-in-law", "#", class: "dropdown-item" %>
+            <%= link_to " Your Beloved Mother-in-law", "http://www.perdu.com/", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, data: {confirm: "Are you sure to log out?"}, class: "dropdown-item" %>
           </div>
         </li>
