fixed wrong correction

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -34,10 +34,10 @@
   color: white;
 }
 
-
 body {
   background-color: #ECF1FA;
-=======
+}
+
 .search_location > label.string.required {
   opacity: 0;
   margin:0;
