--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,10 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+// our color palette
+$strong-blue: #346DD1;
+$medium-blue: #CADAF5;
+$light-blue: #EDF2FB;
+$strong-red: #B71D12;
+$medium-red: #DE9893;
