--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: $light-blue ;
   opacity: 1;
-  border-bottom: 1px solid lightgrey;
-  border-radius: 5px;
   position: sticky;
   top: 0;
   z-index:99;
