--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,7 @@
   height: 50px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.6);
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
   position: sticky;
   bottom: 0px;
 }
