--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: $light-blue ;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
   opacity: 1;
   position: sticky;
   top: 0;
