add carousel in the mothers show

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,7 @@
 .banner {
   background-size: cover;
   background-position: center;
-  height: 90vh;
+  padding: 320px;
 }
 
 .banner h1 {
@@ -18,6 +18,8 @@
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
+
+
 
 #banner {
   background-size: cover;
