still on that fckng show

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,21 +1,25 @@
 .carousel .item {
-  height: 400px;
+  height: 500px;
   width: 1000px;
   object-fit: cover;
+  margin: 0px;
 }
 .carousel-item{
-  height: 400px;
+  height: 500px;
   width: 1000px;
   object-fit: cover;
+  margin: 0px;
 }
 .carousel-item img{
-  height: 400px;
+  height: 500px;
   width: 1000px;
   object-fit: cover;
+  margin: 0px;
 }
 .carousel {
-  height: 400px;
+  height: 500px;
   width: 1000px;
   object-fit: cover;
   margin-top: 50px;
+  margin: 0px;
 }
