--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,8 +20,8 @@
             <%= image_tag "http://icons.iconarchive.com/icons/gianni-polito/colobrush/256/software-crystal-msn-icon.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Add your Mother", new_user_mother_path(current_user.id), class: "nav-link" %>
-            <%= link_to " Your Beloved Mother-in-law", "http://www.perdu.com/", class: "dropdown-item" %>
+            <%= link_to "Your profile", "#", class: "dropdown-item" %>
+            <%= link_to "Add your Mother", new_user_mother_path(current_user.id), class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, data: {confirm: "Are you sure to log out?"}, class: "dropdown-item" %>
           </div>
         </li>
