carousel ok, avatar ok, show card in progress

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -37,7 +37,7 @@
 }
 
 body {
-  background-color: #ECF1FA;
+  background-color: rgba(236, 241, 250, 0.4);
 }
 
 .search_location > label.string.required {
