--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,25 +1,21 @@
-.carousel .item {
-  height: 500px;
-  width: 1000px;
-  object-fit: cover;
-  margin: 0px;
-}
-.carousel-item{
-  height: 500px;
-  width: 1000px;
-  object-fit: cover;
-  margin: 0px;
-}
+// .carousel .item {
+//   height: 500px;
+//   width: 1000px;
+//   object-fit: cover;
+//   margin: 0px;
+// }
+// .carousel-item{
+//   height: 500px;
+//   width: 1000px;
+//   object-fit: cover;
+//   margin: 0px;
+// }
 .carousel-item img{
+  width: 100%;
   height: 500px;
-  width: 1000px;
   object-fit: cover;
   margin: 0px;
 }
 .carousel {
-  height: 500px;
-  width: 1000px;
-  object-fit: cover;
-  margin-top: 50px;
-  margin-left: 60px;
+  margin-top: 40px;
 }
