--- a/app/assets/stylesheets/components/_booking-card.scss
+++ b/app/assets/stylesheets/components/_booking-card.scss
@@ -4,7 +4,9 @@
   box-shadow: 5px 5px 5px rgba(0, 0, 0, .2);
   position: sticky;
   top: 20px;
-  height: 300px;
+  height: auto;
+  padding-top: 12px;
+  padding-bottom: 5px;
   width: 250px;
   border-radius: 5px;
   background-color: white;
