--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -5,6 +5,6 @@
     <p>Starting at: <strong><%= @booking.starts_at %></strong></p>
     <p>Ending at: <strong><%= @booking.ends_at %></strong></p>
     <p>For a total price of <strong><%= @booking.price %> €</strong></p>
-    <p>Happy Mothering!</p>
+    <p>Happy Mother-sitting!</p>
   </div>
 </div>
