--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container py-3">
   <div class="col-4 offset-4">
     <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
@@ -34,7 +34,6 @@
     <h3>Cancel my account</h3>
 
     <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
     <%= link_to "Back", :back %>
   </div>
 </div>
