display bookin card, and few features

--- a/app/views/mothers/_reviews-board.html.erb
+++ b/app/views/mothers/_reviews-board.html.erb
@@ -1,5 +1,7 @@
 <div class="reviews-info col-8">
-      <h2>Reviews:</h2>
+      <div class="reviews-header">
+        <h2>Reviews:</h2>
+      </div>
       <ul>
         <% @mother.reviews.each do |review| %>
         <div class="reviews-info-owner-avatar">
