--- a/app/views/mothers/show.html.erb
+++ b/app/views/mothers/show.html.erb
@@ -1,33 +1,5 @@
 <div class="container">
-  <div id="carouselExampleFade" class="col-12 carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <% @mother.photos.each do |photo| %>
-          <% if photo == @mother.photos.first %>
-            <div class="carousel-item active">
-            <%= cl_image_tag photo.key, class: "d-block w-100"%>
-            </div>
-          <% else %>
-            <div class="carousel-item" data-interval="2000">
-              <%= cl_image_tag photo.key, class: "d-block w-100"%>
-            </div>
-          <% end %>
-        <% end %>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-  </div>
-          <p class="text-center"></p>
+  <%= render "caroussel-show" %>
   <div class="d-flex">
     <div class="mother-info col-8">
       <div class="d-flex justify-content-between mother-info-top">
