--- a/app/assets/stylesheets/components/_booking-card.scss
+++ b/app/assets/stylesheets/components/_booking-card.scss
@@ -3,8 +3,8 @@
   border: 1px solid rgba(0, 0, 0, .5);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, .2);
   position: sticky;
-  top: 20px;
-  height: auto;
+  top: 72px;
+  height: 400px;
   padding-top: 12px;
   padding-bottom: 5px;
   width: 250px;
