--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,5 +1,11 @@
-<div class="container p-3">
-  <div class="col-4 offset-4">
+<div class="container p-3", style="height:86vh">
+  <div class="col-6 offset-4">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <p>You, <strong><%= @booking.user.name %></strong>,</p>
     <p>Rented the mother <strong><%= @booking.mother.name %></strong></p>
     <p>Starting at: <strong><%= @booking.starts_at %></strong></p>
