--- a/app/views/mothers/index.html.erb
+++ b/app/views/mothers/index.html.erb
@@ -5,7 +5,7 @@
 
 <div class="container">
   <div class="row mb-3">
-      <h1> Our selection of Mothers </h1>
+      <h1 class="mt-3"> Our selection of Mothers </h1>
     <div class="col-8 grid px-3" >
       <% @mothers.each do |mother| %>
           <%= link_to mother_path(mother)  do%>
