--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container py-3">
+<div class="container py-3" style="height:86vh">
   <div class="col-4 offset-4">
     <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
@@ -11,7 +11,6 @@
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
         <% end %>
-
         <%= f.input :password,
                     hint: "leave it blank if you don't want to change it",
                     required: false,
@@ -27,14 +26,11 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Update", class: "btn btn-primary" %>
+        <%= f.button :submit, "Update", class: "btn btn-primary mb-2" %>
       </div>
     <% end %>
+    <p><u><%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></u> or <u><%= link_to "Back", :back %></u></p>
 
-    <h3>Cancel my account</h3>
-
-    <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-    <%= link_to "Back", :back %>
   </div>
 </div>
 
