--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container py-3">
+<div class="container py-3" style="height:86vh">
   <div class="col-4 offset-4">
     <h2>Sign up</h2>
 
@@ -26,7 +26,7 @@
       </div>
     <% end %>
     <div class="py-3">
-      <%= render "devise/shared/links" %>
+      <u><%= render "devise/shared/links" %></u>
     </div>
   </div>
 </div>
