--- a/app/views/mothers/_reviews-board.html.erb
+++ b/app/views/mothers/_reviews-board.html.erb
@@ -1,25 +1,33 @@
-<div class="reviews-info col-8">
+<div class="reviews-info">
       <div class="reviews-header">
         <h2>Reviews:</h2>
       </div>
       <ul>
         <% @mother.reviews.each do |review| %>
-        <div class="reviews-info-owner-avatar">
-            <% if User.find(review.user_id).avatar.attached? %>
-              <%= cl_image_tag User.find(review.user_id).avatar.key, class: "avatar" %>
-            <% else %>
-              <%= image_tag "http://icons.iconarchive.com/icons/gianni-polito/colobrush/256/software-crystal-msn-icon.png", width: 40 %>
-            <% end %>
-        </div>
-          <div class="review-sample">
-            <h5><%= review.user.name %></h3><em><%= review.rating %> <%= review.description %></em>
+        <div class="d-flex pt-3">
+          <div class="reviews-info-owner-avatar">
+              <% if User.find(review.user_id).avatar.attached? %>
+                <%= cl_image_tag User.find(review.user_id).avatar.key, class: "avatar" %>
+              <% else %>
+                <%= image_tag "http://icons.iconarchive.com/icons/gianni-polito/colobrush/256/software-crystal-msn-icon.png", width: 40 %>
+              <% end %>
           </div>
+          <div class="review-sample ml-3">
+            <h5 class="mb-n1"><%= review.user.name %></h5>
+            <span style="color: blue">
+              <% review.rating.times do %>
+                <i class="fas fa-star"></i>
+              <% end %>
+            </span> - <em><%= review.description %></em>
+          </div>
+        </div>
         <% end %>
       </ul>
-
-      <%= simple_form_for [@mother, @review] do |f|  %>
-      <%= f.input :rating, collection: (1..5) %>
-      <%= f.input :description %>
-      <%= f.submit "Submit" %>
-      <% end %>
+      <div class="m-3">
+        <%= simple_form_for [@mother, @review] do |f|  %>
+        <%= f.input :rating, collection: (1..5) %>
+        <%= f.input :description %>
+        <%= f.submit "Submit", class:"mb-3 btn btn-primary" %>
+        <% end %>
+      </div>
   </div>
