--- a/app/views/mothers/_reviews-board.html.erb
+++ b/app/views/mothers/_reviews-board.html.erb
@@ -25,7 +25,7 @@
       </ul>
       <div class="m-3">
         <%= simple_form_for [@mother, @review] do |f|  %>
-        <%= f.input :rating, collection: (1..5) %>
+        <%= f.input :rating, collection: [['⭐︎', 1], ['⭐︎⭐︎', 2], ['⭐︎⭐︎⭐︎', 3], ['⭐︎⭐︎⭐︎⭐︎', 4], ['⭐︎⭐︎⭐︎⭐︎⭐︎', 5]] %>
         <%= f.input :description %>
         <%= f.submit "Submit", class:"mb-3 btn btn-primary" %>
         <% end %>
