add geocoder mapbox and granny cursors

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,9 +10,11 @@
 @import "card-index";
 @import "grid";
 @import "carousel";
+@import "map";
 
 
 #price-assessment {
   transition: opacity 2s;
   transition: background-color 1s;
 }
+
