--- a/app/views/mothers/index.html.erb
+++ b/app/views/mothers/index.html.erb
@@ -20,10 +20,16 @@
       <% end %>
     </div>
 
-    <div class="col-4">
-      <img id="map" src='https://raw.githubusercontent.com/lewagon/layouts-demo/gh-pages/images/mapbox.png'>
-    </div>
+    <div
+      class="col-4"
+      id="map"
+      style="width: 100%;
+      height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key=<%= ENV['MAPBOX_API_KEY'] %>
+    ></div>
 
     </div>
   </div>
 </div>
+
