--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: $light-blue;
+  background: $medium-blue;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -16,14 +16,15 @@
   align-items: center;
 }
 .footer-links a {
-  color: $strong-blue;
-  opacity: 0.30;
+  color: $strong-red;
+  opacity: 0.8;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
 }
 .footer-links a:hover {
   opacity: 1;
+  color: $strong-red;
 }
 .footer .fa-heart {
   color: #D23333;
