--- a/app/assets/stylesheets/components/_card-index.scss
+++ b/app/assets/stylesheets/components/_card-index.scss
@@ -3,6 +3,8 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   height: 100%;
+  border-radius: 5px;
+  border: 2px
 }
 
 .card-trip > img {
