--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -12,7 +12,9 @@
 @import "carousel";
 @import "search";
 @import "map";
-
+@import "form-background";
+@import "form-flex";
+@import "btn-form";
 
 
 #price-assessment {
